[gd_scene load_steps=10 format=3 uid="uid://cyvwwrwii4n8b"]

[ext_resource type="Script" path="res://scripts/farmer_enemy.gd" id="1_siksc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_esx4w"]
[ext_resource type="Texture2D" uid="uid://dnib0h0pqf5yr" path="res://assets/farmer_enemy.png" id="2_yssws"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_wa0nw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_l72hq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_106i1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r48bn"]
custom_solver_bias = 1.0
size = Vector2(91, 90)

[sub_resource type="Animation" id="Animation_ac0c2"]
resource_name = "moving"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eq3cv"]
_data = {
"moving": SubResource("Animation_ac0c2")
}

[node name="Path2D" type="Path2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_siksc")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
loop = false

[node name="CharacterBody2D" type="CharacterBody2D" parent="PathFollow2D" groups=["Enemy"]]

[node name="Enemy" type="Sprite2D" parent="PathFollow2D/CharacterBody2D"]
position = Vector2(0, -1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_yssws")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/CharacterBody2D"]
shape = SubResource("RectangleShape2D_r48bn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PathFollow2D/CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_eq3cv")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_esx4w")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("3_wa0nw")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_l72hq")

[node name="ToTravelling" type="Node" parent="StateChart/CompoundState/Spawning"]
script = ExtResource("5_106i1")
to = NodePath("../../Travelling")

[node name="Travelling" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_l72hq")

[node name="Despawn" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_l72hq")

[node name="Dying" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_l72hq")

[connection signal="state_entered" from="StateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/Travelling" to="." method="_on_travelling_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Travelling" to="." method="_on_travelling_state_processing"]
